objects/Newsletter__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The category of challenges the newsletter is for.</inlineHelpText>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Newsletters</relationshipLabel>
        <relationshipName>Newsletters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscribers__c</fullName>
        <label>Subscribers</label>
        <summaryForeignKey>Newsletter_Subscription__c.Newsletter__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Newsletter</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Newsletter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Newsletters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>